<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connect</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_self_info">SelfInfoActivity</string>
    <string name="title_activity_contact_info">ContactInfoActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_labels">LabelsActivity</string>
    <string name="title_activity_lable_detail">LableDetailActivity</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="search">搜索联系人</string>
    <string name="label_name">标签名</string>
    <string name="cn_ok">确定</string>
    <string name="add_label">添加标签</string>
    <string name="backToMain"><![CDATA[<AllContacts]]></string>
    <string name="add">+</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="members">Members</string>
    <string name="add_member">add member</string>
    <string name="delete">delete</string>
    <string name="edit">Edit</string>
    <string name="back_to_labels"><![CDATA[<All Label]]></string>
    <string name="minus">-</string>
    <string name="title_activity_label_details">LabelDetailsActivity</string>
    <string name="YES">YES</string>
    <string name="no">NO</string>
    <string name="confirm">confirm</string>
    <string name="Member">Member</string>
    <string name="my_information">MY INFORMATION</string>
    <string name="all_contact"><![CDATA[<All Contact]]></string>
    <string name="all_label"><![CDATA[<All Label]]></string>
    <string name="title_activity_edit_contact_label">EditContactLabelActivity</string>
    <string name="sure">Sure</string>


    <!-- -->
    <string name="add_friend">添加好友</string>
    <string name="whether_add_friend">是否添加到好友列表？</string>
    <string name="information_lost">请完善个人信息！</string>
    <string name="no_name">未输入姓名！</string>
    <string name="no_phone">未输入号码！</string>
    <string name="no_address">未输入地址！</string>
    <string name="is_save">已保存</string>

    <!-- error -->
    <string name="error_phone_format">手机格式错误</string>
    <string name="error_no_person">联系人不存在！</string>
    <string name="add_new_tel"><![CDATA[< new phone]]></string>
    <string name="add_new_label"><![CDATA[< Select New Label]]></string>


</resources>
