<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/label_detail_layout"
              android:background="@color/white"
              android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_blue">

        <TextView
            android:id="@+id/labels_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_label"
            style="@style/simple_back_button"
            android:clickable="true"/>

        <TextView
            android:id="@+id/edit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:text="@string/edit"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:clickable="true"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="2dp"
        android:gravity="center"
        android:layout_margin="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="5dp"
            android:background="@drawable/label50"
            android:scaleType="fitCenter"
            android:id="@+id/label_icon"/>

        <TextView
            android:id="@+id/label_name"
            android:text="Label"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/member_count"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="(0)"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"/>

    </LinearLayout>

    <TextView
        style="@style/purple_title"
        android:text="@string/members"
        android:layout_margin="5dp"/>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/add_member_layout"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_member"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/cwh_white_button_selector"
            android:textColor="@drawable/light_orange_button_text_selector"
            android:textSize="18sp"
            android:text="@string/add"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="@color/bright_grey"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/add_member"/>
    </LinearLayout>

    <ListView
        android:id="@+id/member_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="4dp"
        android:background="@color/light_gray"/>

    <Button
        android:visibility="gone"
        android:id="@+id/delete_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textSize="21sp"
        android:background="@drawable/cwh_green_button_selector"
        android:textColor="@drawable/cwh_blue_button_text_selector"
        android:text="@string/delete"/>

</LinearLayout>